--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "external-java-lab-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8081",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -41,6 +42,8 @@
   },
   "devDependencies": {
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "react-cookie": "^6.1.0",
     "react-redux": "^8.1.2"
   }
