--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@mui/material": "^5.14.9",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
