--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "http-proxy-middleware": "^2.0.6",
     "react-cookie": "^6.1.0",
     "react-redux": "^8.1.2",
+    "react-tag-input": "^6.8.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   }
